# omero-test

./: Dockerfile  README.md  connect.py  docker-compose.yml  pyproject.toml  test_connect.py
