[tool.poetry]
name = "omero-test"
version = "0.1.0"
description = "Scripts to test OMERO.web and OMERO.server"
authors = ["Bradford N. Roarr <bradford_roarr@brown.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
omero-py = "^5.6.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.4.4"
pytest = "^5.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
